@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.20 2007-10-25 17:44:24 nicm Exp $ */
+/* $Id: cmd.c,v 1.21 2007-10-26 13:03:59 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -30,6 +30,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_has_session_entry,
 	&cmd_kill_window_entry,
 	&cmd_last_window_entry,
+	&cmd_link_window_entry,
 	&cmd_list_clients_entry,
 	&cmd_list_keys_entry,
 	&cmd_list_sessions_entry,
